set(headers ILPSolverIf.h)
set(sources ILPSolverIf.cpp)
include_directories(${cbc_SOURCE_DIR}/Cbc/src)
include_directories(${cbc_SOURCE_DIR}/Cgl/src)
include_directories(${cbc_SOURCE_DIR}/Clp/src)
include_directories(${cbc_SOURCE_DIR}/Clp/src/OsiClp)
include_directories(${cbc_SOURCE_DIR}/Osi/src/Osi)
include_directories(${cbc_SOURCE_DIR}/CoinUtils/src)
include_directories(${symphony_SOURCE_DIR}/SYMPHONY/include)
add_library(ILPSolverIf STATIC ${sources} ${headers})
add_library(ILPSolverIf_shared SHARED ${sources} ${headers})
add_dependencies(ILPSolverIf cbc symphony)
add_dependencies(ILPSolverIf_shared cbc symphony)
target_link_libraries(ILPSolverIf INTERFACE ${symphony_LIBRARIES} ${cbc_LIBRARIES})
set_target_properties(ILPSolverIf PROPERTIES PUBLIC_HEADER "ILPSolverIf/ILPSolverIf.h")
message(STATUS "cbc dep libs ${cbc_LIBRARIES} ${CMAKE_INSTALL_PREFIX}/lib")
install(FILES ${cbc_LIBRARIES} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
install(FILES ${symphony_LIBRARIES} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
